Use harmonic average for pose ambiguity